# installed-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: tree.rs
src/: lib.rs
src/platform/: macos.rs  mod.rs  windows.rs
