[package]
name = "installed"
description = "List installed software on Windows and macOS"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lyricwulf/installed-rs"
authors = ["Lyric Hu <lyricwulf@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winreg = "0.11"
once_cell = "1.17"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = ["Win32_System_Registry"]

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.4"
